[package]
name = "nes-wasm"
version = "0.1.0"
authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/jeffrey-xiao/nes-rs"
documentation = "https://docs.rs/nes-rs"
description = """
An NES emulator.
"""
categories = ["wasm", "emulators"]
keywords = ["nes", "emulator"]
include = ["src/**/*", "Cargo.toml"]

[badges]
travis-ci = { repository = "jeffrey-xiao/nes-rs", branch = "master" }

[lib]
crate-type = ["cdylib", "rlib"]
name = "nes_wasm"
path = "src/lib.rs"

[dependencies]
cfg-if = "0.1.2"
clap = { version = "2.32", optional = true }
console_error_panic_hook = "0.1.1"
js-sys = "0.2"
sdl2 = { version = "0.31.0", optional = true }
wasm-bindgen = "0.2"

[profile.release]
debug = false
lto = true

[[bin]]
name = "nes-sdl2"
path = "src/main.rs"
required-features = ["clap", "sdl2"]
