[package]
name = "neso"
version = "0.3.0"
authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/jeffrey-xiao/neso-rs"
documentation = "https://docs.rs/neso"
description = """
An NES emulator.
"""
categories = ["wasm", "emulators"]
keywords = ["nes", "emulator"]
include = ["src/**/*", "Cargo.toml"]

[badges]
travis-ci = { repository = "jeffrey-xiao/neso-rs", branch = "master" }

[lib]
crate-type = ["cdylib", "dylib", "rlib"]

[dependencies]
cfg-if = "0.1.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bincode = "1.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
erased-serde = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
debug = false
lto = true
